# borderless-hs

./: LICENSE  README.md  borderless.cabal
examples/borderless-example/: Main.hs
examples/standard-deposit-flow/: Main.hs
examples/virtual-account-flow/: Main.hs
src/Borderless/: Client.hs  Prelude.hs  V1.hs
src/Borderless/V1/: Accounts.hs  Auth.hs  ComplianceChecks.hs  Error.hs  Identities.hs  IntegrationsConfig.hs  PaymentInstructions.hs  PermissionGroups.hs  Transactions.hs  Users.hs  VirtualAccounts.hs  Webhooks.hs
src/Borderless/V1/Transactions/: AssetDeposits.hs  Deposits.hs  Swaps.hs  Withdrawals.hs
src/Borderless/V1/Types/: Common.hs  Enums.hs  Pagination.hs
test/: Main.hs
